# endless-context

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  smoke_chat_check.py
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docker/: entrypoint.sh  setup-bub-workspace.py
docs/: index.md
scripts/: debug_tape_render.py  inspect_tape_db.py  install-skill-from-github.py
src/endless_context/: __init__.py  agent.py  bub_runtime.py  tape_store.py
src/poweragent/: __init__.py  agent.py
tests/: test_agent.py  test_app.py  test_tape_store.py
