[project]
name = "poweragent"
version = "0.1.0"
description = "A dead-simple Gradio chat agent powered by PowerMem."
authors = [
    { name = "PsiACE", email = "psiace@apache.org" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "powermem>=0.2.1",
]

[project.urls]
Homepage = "https://modelscope.cn/docs/studios/create"
Repository = "https://github.com/oceanbase/poweragent"

[dependency-groups]
dev = [
    "prek>=0.2.17",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "pytest>=7.4.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
source-includes = ["app.py", "README.md", ".env.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
